Ahora si va todo, estaba mal la carpeta templates

--- a/src/main/resources/templates/prova.html
+++ b/src/main/resources/templates/prova.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Prova del controlador</h1>
 <p>El missatge és: <i th:text="${message}"></i></p>
-<a href="/">Tornar</a>
+<a href="/static">Tornar</a>
 </body>
 </html>
 
