--- a/src/main/resources/templates/prova_nadador.html
+++ b/src/main/resources/templates/prova_nadador.html
@@ -14,7 +14,7 @@
 <p><b>Edat:</b> <span th:text="${nadador.edat}"> </span></p>
 <p><b>Categoria:</b> <span th:text="${categoria}"></span></p>
 
-<a href="/">Tornar</a>
+<a href="/static">Tornar</a>
 </body>
 </html>
 
