--- a/src/main/resources/templates/nadador/list.html
+++ b/src/main/resources/templates/nadador/list.html
@@ -3,11 +3,13 @@
 <head>
   <title>Gestionar Nadadors</title>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
+  <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
+
 </head>
 <body>
 <h1>Llista de Nadadors</h1>
-<table>
+<table th:unless="${#lists.isEmpty(nadadors)}" class="table table-striped">
   <thead>
   <tr>
     <th>Num. Federat</th>
@@ -26,13 +28,13 @@
     <td th:text="${nadador.pais}"></td>
     <td th:text="${nadador.edat}"></td>
     <td th:text="${nadador.genere}"></td>
-    <td><a th:href="@{/nadador/update/{nom}(nom=${nadador.nom})}">Edita</a>
+    <td><a th:href="@{/nadador/update/{nom}(nom=${nadador.nom})}" class="btn btn-warning">Edita</a>
     </td>
-    <td><a th:href="@{/nadador/delete/{nom}(nom=${nadador.nom})}">Esborra</a>
+    <td><a th:href="@{/nadador/delete/{nom}(nom=${nadador.nom})}" class="btn btn-danger">Esborra</a>
     </td>
   </tr>
   </tbody>
 </table>
-<a href="add">Afegeix nadador</a>
+<a href="add" class="btn btn-primary">Afegeix nadador</a>
 </body>
 </html>
