--- a/src/main/resources/templates/prova/list.html
+++ b/src/main/resources/templates/prova/list.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Llista de provas</h1>
-<table class="table table-dark">
+<table class="table table-striped">
     <thead>
     <tr>
         <th>Nom</th>
@@ -23,14 +23,14 @@
         <td th:text="${Prova.nom}"></td>
         <td th:text="${Prova.descripcio}"></td>
         <td th:text="${Prova.tipus}"></td>
-        <td th:text="${Prova.data}"></td>
-        <td><a th:href="@{/prova/update/{nom}(nom=${Prova.nom})}">Edita</a>
+        <td th:text="${#temporals.format(Prova.data,'dd MMMM yyyy')}"></td>
+        <td><a th:href="@{/prova/update/{nom}(nom=${Prova.nom})}" class="btn btn-warning">Edita</a>
         </td>
-        <td><a th:href="@{/prova/delete/{nom}(nom=${Prova.nom})}">Esborra</a>
+        <td><a th:href="@{/prova/delete/{nom}(nom=${Prova.nom})}" class="btn btn-danger">Esborra</a>
         </td>
     </tr>
     </tbody>
 </table>
-<a href="add">Afegeix prova</a>
+<a href="add" class="btn btn-success">Afegeix prova</a>
 </body>
 </html>
