Ahora si va el login como toca.

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -2,7 +2,9 @@
   <div class="navbar-collapse collapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" ><a class="nav-link" href="/" th:href="@{/}">Pàgina principal</a></li>
-      <li class="nav-item" ><a class="nav-link" href="/" th:href="@{/}">Área privada</a></li>
+      <li class="nav-item" ><a class="nav-link" href="/" th:href="@{/nadador/list}">Gestio d'Usuaris</a></li>
+      <li class="nav-item" ><a class="nav-link" href="/" th:href="@{/user/list}">Área privada</a></li>
+
     </ul>
   </div>
 </nav>
