--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{fragments/base}">
 <head>
   <title>Llista d'usuaris del sistema</title>
   <meta charset="UTF-8"/>
@@ -11,21 +12,25 @@
 </head>
 
 <body>
-<h1>Llista d'usuaris del sistema</h1>
-<div th:replace="fragments/logininfo" >  NO HAY USUARIOS </div>
-<table th:unless="${#lists.isEmpty(users)}"  class="table   table-condensed">
-  <thead>
-  <tr>
-    <th>Nom d'usuari</th>
-  </tr>
-  </thead>
+<div layout:fragment="content">
 
-  <tbody>
-  <tr th:each="user: ${users}">
-    <td th:text="${user.username}"></td>
-  </tr>
-  </tbody>
-</table>
-<a href="/" class="btn btn-primary" role="button">Tornar</a>
+  <h1>Llista d'usuaris del sistema</h1>
+  <table th:unless="${#lists.isEmpty(users)}"  class="table   table-condensed">
+    <thead>
+    <tr>
+      <th>Nom d'usuari</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <tr th:each="user: ${users}">
+      <td th:text="${user.username}"></td>
+    </tr>
+    </tbody>
+  </table>
+  <a href="/" class="btn btn-primary" role="button">Tornar</a>
+
+</div>
+
 </body>
 </html>
